--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   border-radius: 1.5rem;
   padding: 1rem 2rem 1.7rem 2rem;
   width: 73rem;
+  margin-top: 6.3rem;
 }
 
 header {
@@ -34,7 +35,7 @@ header h2 {
   color: #fff;
   text-align: center;
   border-radius: 20%;
-  padding-top: 0.3rem;
+  padding-top: 0.2rem;
   box-sizing: border-box;
 }
 
@@ -54,10 +55,8 @@ main {
 
 .notification {
   display: flex;
-  justify-content: left;
   gap: 1.9rem;
   align-items: start;
-  width: 67rem;
   padding: 1.8rem 2rem;
   cursor: pointer;
 }
@@ -76,7 +75,7 @@ main {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 60rem;
+  gap: 1rem;
 }
 
 .notificationDetails span {
@@ -87,6 +86,7 @@ main {
   font-size: 1.6rem;
   font-weight: 800;
   color: #1c202b;
+  cursor: pointer;
 }
 
 .action {
@@ -99,12 +99,14 @@ main {
   font-size: 1.6rem;
   font-weight: 800;
   color: #5e6778;
+  cursor: pointer;
 }
 
 .groupName {
   font-size: 1.6rem;
   font-weight: 800;
   color: #0a327b;
+  cursor: pointer;
 }
 
 .time {
@@ -123,15 +125,60 @@ main {
   font-size: 1.6rem;
   font-weight: 500;
   color: #5e6778;
+  cursor: pointer;
+}
+
+.text:hover {
+  background-color: #e5effa;
 }
 
 .redDot {
-  width: 0.8rem;
-  height: 0.8rem;
+  padding: 0.4rem;
   background-color: #f65552;
   border-radius: 50%;
 }
 
 .userPic {
-  transform: translateX(-8rem);
+  cursor: pointer;
+  margin-left: auto;
+}
+
+@media screen and (max-width: 800px) {
+  .notificationsContainer {
+    width: auto;
+    margin: 6.3rem 4rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .notificationsContainer {
+    width: auto;
+    margin: 0;
+  }
+
+  .headerTitle h2 {
+    font-size: 2rem;
+  }
+
+  .markAll {
+    font-size: 1.4rem;
+  }
+
+  .profilePic,
+  .userPic {
+    width: 3.9rem;
+  }
+
+  .username,
+  .action,
+  .post,
+  .groupName,
+  .time,
+  .text {
+    font-size: 1.4rem;
+  }
+
+  .text {
+    padding: 1rem;
+  }
 }
